@@ -1,6 +1,5 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.0.56
-
     
   *) SECURITY: CVE-2005-3357 (cve.mitre.org)
      mod_ssl: Fix a possible crash during access control checks if a
@@ -14,6 +13,9 @@ Changes with Apache 2.0.56
      to avoid potential cross-site scripting.  Change also made to
      ap_escape_html so we escape quotes.  Reported by JPCERT.
      [Mark Cox]
+
+  *) mod_speling: Stop crashing with certain non-file requests.  
+     [Jeff Trawick]
 
   *) keep the Content-Length header for a HEAD with no response body.
      PR 18757 [Greg Ames]
